Fix problem : collapse animation, focus link navBar

--- a/src/utils/styles/style.scss
+++ b/src/utils/styles/style.scss
@@ -3,6 +3,23 @@ $white: #fff;
 $grey: #F6F6F6;
 $main-color: #FF6060;
 
+nav{
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 100px 50px 100px;
+  #navbar{
+    a{
+      margin-left: 57px;
+      font-size: 24px;
+      text-decoration: none;
+      color: $main-color;
+    }
+    a.active {
+      text-decoration: underline;
+    }
+    padding: 0;
+  }
+}
 .banner{
   margin: 0 100px;
   border-radius: 25px;
@@ -66,26 +83,6 @@ $main-color: #FF6060;
     font-weight: 500;
   }
 }
-footer{
-  background-color: $black;
-  color: $white;
-  text-align: center;
-  padding: 66px 0 29px 0;
-  margin-top: 50px;
-  .footer__text{
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-  }
-}
-nav{
-  display: flex;
-  justify-content: space-between;
-  margin: 50px 100px 50px 100px;
-  ul{
-    padding: 0;
-  }
-}
 .home__container{
   display: flex;
   flex-direction: column;
@@ -101,86 +98,75 @@ nav{
     margin: 0 100px;
   }
 }
-.collapse__container{
+.apropos__collapse__container{
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 30px;
-  margin: 38px;
+  margin: 30px 0;
+  align-items: center;
 }
-.collapse{
-  width: 1023px;
-  display: grid;
-  .collapse__header{
-    background-color: $main-color;
-    padding: 10px 20px 10px 15px;
-    border-radius: 5px;
+.collapse {
+  max-width: 1025px;
+  background-color: $grey;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+
+  .collapse__title {
+    color: $white;
+    font-size: 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .collapse__title{
-      font-size: 24px;
-      font-weight: 500;
-      color: $white;
-    }
-    .collapse__open--btn{
+    padding: 10px;
+    border-radius: 10px;
+    background-color: $main-color;
+
+    .btn-open-collapse {
+      border: none;
       background-color: inherit;
-      border: 0;
+      transform: rotate(0deg);
+      transition: transform 500ms ease-in-out;
+      &:hover{
+        cursor: pointer;
+      }
     }
-    .animate{
-      animation: rotateBtn 100ms ease-in-out both alternate;
+
+    .btn-open-collapse--rotate {
+      transform: rotate(180deg);
     }
   }
-  .collapse__body{
-    transform: scaleY(0);
-    visibility: hidden;
+  .collapse__description {
     max-height: 0;
-    transform-origin: top;
+    padding: 0 20px;
     overflow: hidden;
-    background-color: $grey;
-    border-radius: 0px 0px 5px 5px;
-    .collapse__description{
-      margin: 20px 20px 10px 15px;
+    transition: max-height 300ms ease-in-out;
+    p{
       color: $main-color;
       font-size: 18px;
-      font-weight: 400;
+      transform: translateY(-50px);
+      transition: transform 400ms ease-in-out;
+    }
+  }
+  .collapse__description--open {
+    max-height: 500px;
+    p{
+      transform: translateY(0);
     }
   }
 }
-.open-background{
-  animation: openCollapse 300ms ease-in-out both;
-}
-.open-text{
-  animation: showTextCollapse 300ms ease-in-out both;
-}
-
-@keyframes showTextCollapse {
-  0%{
-    transform: translateY(-200px);
-  }
-  100%{
-    transform: translateY(0px);
+footer{
+  background-color: $black;
+  color: $white;
+  text-align: center;
+  padding: 66px 0 29px 0;
+  margin-top: 50px;
+  .footer__text{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
   }
 }
-@keyframes rotateBtn {
-  0%{
-    transform: rotate(0deg);
-  }
-  100%{
-    transform: rotate(180deg);
-  }
-}
-@keyframes openCollapse {
-  0%{
-    transform: scaleY(0);
-  }
-  100%{
-    transform: scaleY(1);
-    visibility: visible;
-    max-height: 500px;
-}
-}
-
 @media screen and (max-width: 375px){
   .banner{
     margin: 15px;
@@ -203,7 +189,12 @@ nav{
   nav{
     align-items: center;
     margin: 15px;
-    ul{
+    #navbar{
+      a{
+        font-size: 12px;
+        margin-left: 26px;
+        text-transform: uppercase;
+      }
     }
     .navbar__img{
       height: 48px;
@@ -222,21 +213,19 @@ nav{
   }
   .collapse{
     width: 100%;
-    .collapse__header{
-      padding: 10px;
       .collapse__title{
         font-size: 13px;
       }
-      .collapse__open--btn{
+      .btn-open-collapse{
         padding: 0;
+        height: 15px;
         img{
           height: 15px;
         }
-      }
+
     }
-    .collapse__body{
-      .collapse__description{
-        margin: 15px 20px 20px 20px;
+    .collapse__description{
+      p{
         font-size: 12px;
       }
     }
